# Operating-Systems-labs-2025

./: build.sh  config.ini  daemon.cpp  daemon.h  main.cpp  mydaemon
2. Межпроцессное взаимодействие/: Makefile  build.sh  conn.h  conn_fd.cpp  conn_fd.h  conn_fifo.cpp  conn_fifo.h  conn_pipe.cpp  conn_pipe.h  host.cpp
lab1/: CMakeLists.txt  build.sh  config.yaml  daemon.cpp  start_daemon.sh
lab1/docker-build/: Dockerfile  compose.yaml
lab1/folder1/: file3.txt
lab2/: .gitignore  CMakeLists.txt  README.md  build.sh  conn_base.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_seg.cpp  conn_seg.h  game_logic.h  host.cpp
lab2/src/: client.cpp  client.h  host.cpp  host.h
lab2/src/connections/: conn.h
lab_1_egorliap/: build.sh  config.txt  daemon.cpp  daemon.h  main.cpp  tasks.cpp  tasks.h
lab_2/: CMakeLists.txt  README.md  conn_factory.cpp  conn_factory.h  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_mq.h  conn_shm.cpp  host.cpp  lab2.md  log.txt  message.h  pipes.cpp  pipes.h
lab_2_egorliap/: CMakeLists.txt  build.sh  conn_fifo.cpp  conn_fifo.h  conn_mq.cpp  conn_shm.cpp  conn_shm.h  host.cpp  log.txt  message.h  pipes.cpp  pipes.h
